vipr-portal/portal/public/stylesheets/workflowbuilder.less
.exampleEditor {
    background-color: #eee !important;
    //height: calc(80vh-50px);
    position: absolute;
    bottom: 8px;
    right: 8px;
    left: 88px;
    top: 159px;
    max-width: 100vw;
    border: 1px solid rgb(192, 192, 192);
}

.homeTab{
    background-color: #fcfcfc;
    height:100%;
    text-align: center;
    padding-top: 300px;
    font-size: 30px;
    color: #efeded;
}

.success-icon {
    color:#5cb85c;
}
.warning-icon {
    color:#f0ad4e;
}

.message-bar-icon {
    position: relative;
    top: 2px;
    display: inline-block;
    width: 23px;
}

.button-icon {
    width: 13px;
}

.message-failure-icon:before {
    content: url(/public/img/customServices/FailedMessage.svg);
}

.failure-icon:before {
    content: url(/public/img/customServices/Failed.svg);
}

.error-input-container {
    position:absolute;
    width: 300px;
}

.error-input-icon-hover {
    position: absolute;
    z-index: 3;
    width: 20px;
    height: 20px;
    left: 44px;
    top: 10px;
}

.custom-error-input-popover {
    position: absolute;
    left: -4px;
    bottom: 0px;
}

.custom-error-step-popover {
    position: absolute;
    left: -58px;
    bottom: 99px;
}

.custom-error-popover {
    min-width: 110px;
    display: block;
    background-color: #be1e2d;
    color: white;
    font-size: 13px;
    z-index: 1010;
    max-width: 276px;
    text-align: left;
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    white-space: normal;
    padding: 7px 14px;
    transition: opacity 0.5s;
    opacity: 0;
}

.custom-error-popover.visible {
    opacity: 1;
}

.custom-popover-content {
    padding-top: 1px;
    padding-bottom: 1px;
}

.custom-error-popover.top > .arrow {
    //left: 50%;
    left: 58px;
    margin-left: -11px;
    border-bottom-width: 0;
    border-top-color: #be1e2d;
    bottom: -10px;
}

.custom-error-popover > .arrow {
    border-width: 11px;
}

.custom-error-popover  > .arrow, .custom-error-popover > .arrow:after {
    position: absolute;
    display: block;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
}

.jsPlumb_dragged {
    z-index: 999;
}
.jsPlumb-container {
    width:4000px;
    height:4000px;
    position:relative;
    background-image: url("/public/img/customServices/CanvasPattern.svg");
	background-color: #f7f7f7;
    background-position: -130px -130px;
    background-size: 501px;
}
.example-item-card-wrapper {
    position:absolute;
    z-index:200;
}

.example-item-card-wrapper a {
    text-decoration: none;
}

.item-card-error-icon {
    position: absolute;
    left: -12px;
    width: 25px;
    top: -9px;
}

.item {
    margin-top: 2px;
    margin-bottom: 0;
    padding-top:10px;
    background-color: white;
    border-color: #357ebd;
    border-radius: 3px;
    pointer-events:none;
    border: 2px solid grey;
    height: 75px;
    width: 175px;
    text-overflow: ellipsis;
    word-wrap: break-word;
	
}

.item-start-end {
    height:40px;
    width:70px;
    border: 2px solid #428bca;
    border-radius:50%;
    background-color: #428bca;
}

.sidebar {
    background-color: white !important;
    z-index:999 !important;
    width: 100%;
    height: 100%;
}

.home-sidebar {
    margin-top: 10px;
    background-color: white !important;
    z-index:999 !important;
    width: 100%;
    background-color: white !important;
    z-index: 999 !important;
    position: absolute;
    bottom: 0;
    top: 0;
    width: 408px;
}

.collapsed-home-sidebar {
  //display: none;
    //overflow: hidden;
    //transform: translate3d(0,0,0);
}

.button-bar {
    overflow: hidden;
}

.button-bar-container {
    margin: 10px;
    float: right;
}

.message-bar {
    position: relative;
    z-index: 1;
}

.message-bar-success {
    background-color: #dff0d8;
    border-color: #d6e9c6;
    color: #3c763d;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    padding: 15px;
}

/* The starting CSS styles for the enter animation */
.message-bar-failure.ng-enter {
  transition:padding-top 0.2s linear;
  transition:max-height 0.2s linear;
  max-height: 0;
}

/* The finishing CSS styles for the enter animation */
.message-bar-failure.ng-enter.ng-enter-active {
  max-height: 100px;
}

.message-bar-failure.ng-leave {
  transition:0.2s linear all;
  opacity:1;
}
.message-bar-failure.ng-leave.ng-leave-active {
  opacity:0;
}

.message-bar-failure {
  overflow: hidden;
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    padding: 15px;
}

.message-bar-closebtn {
    text-decoration: none;
     cursor: pointer;
     cursor: hand;
     padding-right: 10px;
     float:right;
 }

.passEndpoint svg circle {
     fill: #5cb85c;
     border-color: #4cae4c;
 }

.failEndpoint svg circle {
    fill: #d9534f;
    border-color: #d43f3a;
}

.jsplumb-endpoint.jsplumb-endpoint-connected {
    opacity: 1;
}

.jsplumb-connector {
    z-index: 4;
}

.jsplumb-endpoint {
    background-size: contain !important;
    z-index: 5;
    opacity: 0.2;
    stroke: none;
}

.itemText {
    color: black;
    font-size: 13px;
    pointer-events:none;
    width: inherit;
    padding: 5px;
}

.itemTextStartEnd {
    color: white;
    text-align: center;
    margin: 10px;
    font-size: 15px;

}

.draggable-card {
    display: inline-block;
    z-index: 100;
}

.draggable-card .itemText {
    font-size: 16px;
}

.builder-column {
    width: auto;
    height: 100%;
    overflow: hidden;
}

.builder-tab-content {
    position: absolute;
    margin-top: 52px;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}



.button-step-close {
    margin: 5px;
    color: black;
}

.button-container {
    position: absolute;
    right: 0px;
}

.highlighted {
    border: 2px solid #67bbe0;
	background-color: #beebff;
}

table, th , td {
  padding: 5px;
}

.sidenav-panel {
    overflow:scroll;
    /* hack to improve chrome performance by forcing GPU rendering */
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}

.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: absolute; /* Stay in place */
    z-index: 2; /* Stay on top */
    right: 0px;
    background-color: #eee; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    overflow-y: scroll;
    padding-top: 20px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
    border: 1px solid rgb(192, 192, 192);
}

.sidenav-open {
    width: 600px;
    padding-left: 20px;
    padding-right: 20px;
}

.sidenav a:hover, .offcanvas a:focus{
    color: #414141;
    text-decoration: none;
     cursor: pointer;
     cursor: hand;
}

.sidenav .closebtn {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 36px;
    margin-left: 50px;
}

.lib-slider-button {
    padding: 1px;
    height: 100%;
    position: absolute;
    z-index: 1;
    margin-left: 408px;
}

.slider-open {
    margin-right: 600px;
}

#sliderMenu {
    width: 54px;
    height: 100%;
    position: absolute;
    right: 0;
    background-color: white;
    border: 1px solid rgb(192, 192, 192);
    z-index: 2;
}

.side-container {
    float: right;
    position: absolute;
    right: 0px;
    bottom: 0px;
    top: 0px;

    z-index: 1;
}

.builder-container {
    border: 1px solid rgb(192, 192, 192);
    clear: both;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin-top: 54px;
}

#libSidebar {
  position: absolute;
  bottom: 0;
  left:0px;
  top: 0;
  padding-right: 0px;
  padding-left: 5px;
  /* for the animation */
  transition:all 0.2s linear;
  -webkit-transition: all 0.2s linear;
}

#libSidebar.collapsedSideBar {
  left: -413px;
}

#row-main {
  /* necessary to hide collapsed sidebar */
  overflow: hidden;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  margin-left: 0px;
  margin-right: 0px;
  z-index: 0;
}

.tree-controller {
    position: absolute;
    bottom: 0;
    top: 0;
}

.jstree-container {
    overflow: auto;
    /* hack to improve chrome performance by forcing GPU rendering */
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
    position: absolute;
    bottom: 0;
    top: 0;
    width: 408px;
    margin-top: 85px;
    overflow-x: hidden;
}

#builderController {
    /* for the animation */
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transition:all 0.2s linear;
    -webkit-transition: all 0.2s linear;
    margin-left: 427px;
    margin-top: 10px;
}

#builderController.collapsedBuilder {
  margin-left: 14px;
}

#inputDiv .col-sm-3,
#inputDiv .col-sm-9,
#inputDiv .col-sm-12{
   padding-right: 0 !important;
   padding-left: 0 !important;
}

#inputDiv .form-group {
   margin-bottom: 0 !important;
}

.treeMoreOptions.btn-group.open .dropdown-toggle {
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
}

.treeMoreOptions {
    float:right;
    padding-right:5px;
}

#treeMoreOptionsSel.treeMoreOptions {
    z-index: 1;
}

#optionsHoverBtn {
    background-color:#efefef;
    border-color:#efefef;
}

#optionsBtn {
    background-color:#dcecf7;
    border-color:#dcecf7;
    background-size: contain !important;
}

.builder-jstree-icon {
    background-position: center center !important;
    background-size: contain !important;
}

.builder-rest-icon {
    background-image: url(/public/img/customServices/RestApi.svg) !important;
}

.builder-vipr-icon {
    background-image: url(/public/img/customServices/ViPRest.svg) !important;
}

.builder-ansible-icon {
    background-image: url(/public/img/customServices/LocalAnsible.svg) !important;
}

.builder-script-icon {
    background-image: url(/public/img/customServices/Script.svg) !important;
}

.builder-workflow-icon {
    background-image: url(/public/img/customServices/TreeNodeWF.svg) !important;
}

.builder-folder-icon {
    background-image: url(/public/img/customServices/TreeFolder.svg) !important;
}

.step-type-image {
    height: 80%;
    width: 20%;
    float: left;
    text-align: center;
    margin: 5px;
    background-size: contain;
    background-image: url(/public/img/customServices/LocalAnsible.svg);
    background-repeat: no-repeat
}

.input-error-icon .panel-title .glyphicon-error-icon:before {
    content: url(/public/img/customServices/Failed.svg);
}

.required .panel-title:after {
  content: '*';
  color: #a94442;
  font-size: 18px;
}

.primitivesNav > li > a{
    padding: 10px 5px;
}

